--- a/css/styles.css
+++ b/css/styles.css
@@ -342,58 +342,47 @@ button {
     }
   }
 }
+.hero-container {
+  max-width: 320px;
+  padding: 0 16px;
+  margin: 0 auto;
+}
 .hero {
+  max-width: 100%;
+  margin: 0 auto;
+  margin-bottom: 48px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11111;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  margin: 52px;
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    font-weight: 700;
     font-size: 56px;
     line-height: 1.07143;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #fff;
-    margin: 136px;
-  }
-}
-
-@media screen and (min-width: 1158px) {
-  .hero {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07143;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #fff;
-    margin: 472px;
   }
 }
 
 .hero-button {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  text-transform: capitalize;
-  color: #fff;
-  background-color: #4d5ae5;
-  border-radius: 4px;
+  display: block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0 auto;
   padding: 16px 32px;
   min-width: 169px;
   height: 56px;
   border: none;
-  align-items: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  color: #fff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover {
@@ -749,54 +738,62 @@ button {
 /* #region Footer */
 .footer {
   background: #2e2f42;
+  padding: 96px 0;
 }
 
 @media only screen and (min-width: 768px) {
   .footer {
-    padding: 100px 0;
+    padding-left: 108px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .footer {
-    padding: 100px 0;
+    padding: 100px 156px;
   }
 }
 
 .footer-container {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
   .footer-container {
-    width: 552px;
-    text-align: start;
-    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .footer-container {
     display: flex;
-    text-align: start;
+    flex-wrap: nowrap;
+    align-items: baseline;
   }
 }
 
 .footer-style {
-  width: 264px;
-  margin: 0 auto;
+  width: 288px;
+  margin-bottom: 72px;
 }
 
 @media only screen and (min-width: 768px) {
   .footer-style {
     margin-right: 24px;
+    margin-bottom: 72px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .footer-style {
+    width: 264px;
     margin-right: 120px;
+    margin-bottom: 0;
   }
 }
 
@@ -804,26 +801,29 @@ button {
   fill: var(--color-cloud);
 }
 .footer-logo {
-  display: block;
-  margin: 0 auto;
+  display: inline-block;
   margin-bottom: 16px;
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media only screen and (min-width: 768px) {
   .footer-logo {
-    margin: 0;
-    margin-bottom: 16px;
+    position: relative;
+    left: 0;
+    transform: translateX(0);
   }
 }
 
 .footer-text {
+  color: #f4f4fd;
+  max-width: 288px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  width: 264px;
-  margin-left: auto;
-  margin-right: auto;
-  color: #f4f4fd;
+  letter-spacing: 0.02em;
 }
 
 .logo-part {
