--- a/css/styles.css
+++ b/css/styles.css
@@ -566,7 +566,9 @@ button {
   border-radius: 4px 4px 0 0;
   width: 100%;
 }
-
+.team-container {
+  padding: 96px 0;
+}
 .our-team-container {
   padding: 32px 16px;
   text-align: center;
@@ -640,7 +642,14 @@ button {
   color: #2e2f42;
   margin-bottom: 72px;
 }
-
+.our-portfolio-section {
+  padding: 96px 0;
+}
+@media only screen and (min-width: 1158px) {
+  .sour-portfolio-section {
+    padding: 120px 0;
+  }
+}
 .section-title {
   font-weight: 500;
   font-size: 20px;
@@ -659,8 +668,9 @@ button {
 }
 
 .our-portfolio-list {
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -668,8 +678,6 @@ button {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 72px 24px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -685,6 +693,7 @@ button {
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  position: relative;
 }
 
 @media only screen and (min-width: 768px) {
@@ -1001,10 +1010,7 @@ button {
   padding: 8px 24px;
   max-width: 165px;
   height: 40px;
-  cursor: pointer;
   border: none;
-
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
