--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,12 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   color: #434455;
-  background-color: #fff;
-
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  background-color: #ffffff;
 }
-
-/* #region Reset +++*/
 
 ul,
 ol {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
 
 h1,
@@ -42,6 +33,11 @@ button {
   cursor: pointer;
 }
 
+p {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 /* #endregion */
 
 /* #region Common +++*/
@@ -64,6 +60,31 @@ button {
     padding: 0 15px;
   }
 }
+
+.section {
+  padding: 96px 0;
+}
+
+@media only screen and (min-width: 1158px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* #endregion */
 
 /* #region Header +++ */
@@ -269,10 +290,11 @@ button {
 /* #endregion */
 
 /* #region Hero section */
-.hero-section {
+.hero {
   max-width: 320px;
-  padding: 72px 0;
+  width: 100%;
   margin: 0 auto;
+  padding: 72px 0;
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -283,10 +305,8 @@ button {
   background-position: center;
   background-size: cover;
 }
-@media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero-section {
+@media (min-resolution: 192dpi) {
+  .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -296,7 +316,7 @@ button {
 }
 
 @media only screen and (min-width: 768px) {
-  .hero-section {
+  .hero {
     max-width: 768px;
     padding: 112px 0;
     background-image: linear-gradient(
@@ -306,10 +326,8 @@ button {
       url(../images/Hero/hero-tablet-1x.jpg);
   }
 
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .hero-section {
+  @media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
+    .hero {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
@@ -320,9 +338,9 @@ button {
 }
 
 @media screen and (min-width: 1158px) {
-  .hero-section {
+  .hero {
     max-width: 1440px;
-    background-color: #2e2f42;
+
     padding: 188px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -330,10 +348,8 @@ button {
       ),
       url(../images/Hero/hero-desktop-1x.jpg);
   }
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .hero-section {
+  @media only screen and (min-width: 1158px) and (min-resolution: 192dpi) {
+    .hero {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
@@ -342,27 +358,29 @@ button {
     }
   }
 }
-.hero-container {
-  max-width: 320px;
-  padding: 0 16px;
-  margin: 0 auto;
-}
-.hero {
-  max-width: 100%;
-  margin: 0 auto;
-  margin-bottom: 48px;
-  font-weight: 700;
+
+.hero-title {
+  max-width: 216px;
+  margin: auto;
+  margin-bottom: 72px;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
 }
 
 @media screen and (min-width: 768px) {
-  .hero {
+  .hero-title {
+    max-width: 496px;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
+    margin-bottom: 36px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .hero-title {
+    margin-bottom: 48px;
   }
 }
 
@@ -386,29 +404,22 @@ button {
 }
 
 .hero-button:hover {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
 }
 .hero-button:focus {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #404bbf;
 }
 
 /* #endregion */
 
 /* #region Our advantages */
-
-.our-advantage-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
+.subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
-  text-transform: capitalize;
   color: #2e2f42;
-  margin-bottom: 72px;
 }
-
 .advantage-title {
   font-weight: 700;
   font-size: 36px;
@@ -447,29 +458,25 @@ button {
 
 @media only screen and (min-width: 768px) {
   .advantages-list {
-    flex-direction: row;
+    display: flex;
+    row-gap: 72px;
+    column-gap: 24px;
     flex-wrap: wrap;
-    gap: 72px 24px;
-  }
-}
-
-@media only screen and (min-width: 1158px) {
-  .advantages-list {
-    flex-wrap: nowrap;
+    justify-content: center;
   }
 }
 
 .advantages-item {
+  margin-bottom: 72px;
   max-width: 288px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
-
+.advantages-item :last-child {
+  margin-bottom: 0;
+}
 @media only screen and (min-width: 768px) {
   .advantages-item {
+    margin-bottom: 0;
     max-width: 356px;
-    align-items: flex-start;
   }
 }
 
@@ -479,27 +486,25 @@ button {
   }
 }
 
-.svg-adv-container {
-  display: none;
-}
-
 @media only screen and (min-width: 1158px) {
   .svg-adv-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
     border: 1px solid #8e8f99;
-    background: #f4f4fd;
     border-radius: 4px;
-    width: 264px;
+    /* width: 264px; */
     height: 112px;
+    background: #f4f4fd;
     margin-bottom: 8px;
+    justify-content: center;
+    align-items: center;
   }
 }
-
+.svg-adv {
+  display: none;
+}
 @media only screen and (min-width: 1158px) {
   .svg-adv {
-    margin: 0 auto;
+    display: inherit;
   }
 }
 
@@ -509,94 +514,56 @@ button {
 
 .our-team-section {
   background-color: #f4f4fd;
-  padding: 60px 0;
 }
 
 .our-team-title {
-  font-weight: 700;
+  margin-bottom: 72px;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
-  text-transform: capitalize;
   color: #2e2f42;
-  margin-bottom: 72px;
+  text-transform: capitalize;
 }
 
 .our-team-list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   gap: 72px;
-  list-style: none;
-  padding: 0;
 }
 
 @media only screen and (min-width: 768px) {
   .our-team-list {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 64px 24px;
+    justify-content: center;
+    row-gap: 64px;
+    column-gap: 24px;
   }
-}
-
-@media only screen and (min-width: 1158px) {
-  .our-team-list {
-    flex-wrap: nowrap;
-    gap: 24px;
-  }
-}
-
-.our-team-item {
-  max-width: 264px;
-  background-color: #ffffff;
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  margin: 0 auto;
-}
-
-@media only screen and (min-width: 768px) {
-  .our-team-item {
-    margin: 0;
-  }
-}
-
-.our-team-image {
-  border-radius: 4px 4px 0 0;
-  width: 100%;
-}
-.team-container {
-  padding: 96px 0;
 }
 .our-team-container {
-  padding: 32px 16px;
-  text-align: center;
+  padding: 32px 0;
+}
+.our-team-item {
+  border-radius: 0 0 4px 4px;
+  width: 264px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
+  background-color: #fff;
 }
 
-.member-name {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+.member-name,
+.member-role {
+  text-align: center;
   margin-bottom: 8px;
 }
 
-.member-role {
-  font-weight: 400;
-  letter-spacing: 0.02em;
-  color: #6d6e82;
-  margin-bottom: 16px;
-}
-
-.svg-list {
+.social-list {
   display: flex;
   gap: 24px;
   justify-content: center;
-  align-items: center;
-  padding: 0;
-  list-style: none;
 }
 
 .svg-item {
@@ -604,87 +571,38 @@ button {
   height: 40px;
 }
 
-.svg-link {
+.social-link {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  fill: #f4f4fd;
   width: 100%;
   height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.svg-link:active {
+.social-link:hover,
+.social-link:focus {
   background-color: #404bbf;
-}
-
-@media only screen and (min-width: 1158px) {
-  .svg-link {
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .svg-link:hover,
-  .svg-link:focus {
-    background-color: #404bbf;
-  }
 }
 
 /* #endregion */
 /* #region Our Portfolio */
 .our-portfolio-title {
-  font-weight: 700;
+  margin-bottom: 72px;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #2e2f42;
   text-transform: capitalize;
-  color: #2e2f42;
-  margin-bottom: 72px;
-}
-.our-portfolio-section {
-  padding: 96px 0;
-}
-@media only screen and (min-width: 1158px) {
-  .sour-portfolio-section {
-    padding: 120px 0;
-  }
-}
-.section-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-
-.our-portfolio-description {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #6d6e82;
 }
 
 .our-portfolio-list {
   display: flex;
   flex-direction: column;
-  gap: 48px;
-}
-
-@media only screen and (min-width: 768px) {
-  .our-portfolio-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 72px 24px;
-  }
-}
-
-@media only screen and (min-width: 1158px) {
-  .our-portfolio-list {
-    gap: 48px 24px;
-  }
+  align-items: center;
+  gap: 72px;
 }
 
 .our-portfolio-item {
@@ -1253,17 +1171,6 @@ textarea::placeholder {
   display: flex;
   align-items: center;
   gap: 8px;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
 }
 
 .span-form {
