--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,9 @@ p {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
+.social-icon {
+  fill: #f4f4fd;
+}
 /* #endregion */
 
 /* #region Header +++ */
@@ -98,7 +100,6 @@ p {
 .header-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .nav-list,
@@ -118,9 +119,19 @@ p {
 
 .header-logo {
   padding: 16px 0;
-  display: block;
+  margin-right: auto;
 }
-
+@media only screen and (min-width: 768px) {
+  .header-logo {
+    margin-right: 120px;
+    padding: 24px 0;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .header-logo {
+    margin-right: 76px;
+  }
+}
 .header-logo .logo-part {
   color: #2e2f42;
 }
@@ -144,76 +155,87 @@ p {
   .header-nav {
     display: flex;
     align-items: center;
-  }
-  .nav-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+    justify-content: space-between;
+    flex-grow: 1;
   }
 
-  .header-logo {
-    padding: 24px 0;
-    margin-right: 120px;
+  @media only screen and (min-width: 768px) {
+    .header-nav {
+      flex-grow: 0;
+    }
+  }
+  .nav-list {
+    display: none;
+  }
+
+  @media only screen and (min-width: 768px) {
+    .nav-list {
+      display: flex;
+      gap: 40px;
+    }
   }
 
   .nav-link {
     display: block;
-    padding: 24px 0;
-    font-weight: 500;
+    position: relative;
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-
+    transition-property: color;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
-  .nav-link.current {
-    position: relative;
+  .current {
+    color: #404bbf;
   }
 
   .nav-link.current::after {
-    content: "";
-
+    display: block;
     position: absolute;
-    left: 0;
     bottom: -1px;
-
+    left: 0;
+    border-radius: 2px;
     width: 100%;
     height: 4px;
-    border-radius: 2px;
-
     background-color: #404bbf;
+    content: "";
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+}
+.nav-link.current:hover::after {
+  background-color: #404bbf;
+}
 
-  .contacts {
-    font-style: normal;
-    display: block;
-  }
+.nav-link:hover,
+.nav-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.nav-link.current {
+  color: #404bbf;
+}
 
-  .contacts-list {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
+.contacts {
+  font-style: normal;
+  display: block;
+}
 
-  .contacts-link {
-    display: block;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #434455;
+.contacts-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.contacts-link {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #434455;
 
-  .nav-link:hover,
-  .nav-link:focus,
-  .contacts-link:hover,
-  .contacts-link:focus,
-  .nav-link.current {
-    color: #404bbf;
-  }
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 1158px) {
@@ -588,7 +610,7 @@ p {
 
 /* #endregion */
 /* #region Our Portfolio */
-.our-portfolio-title {
+.portfolio-title {
   margin-bottom: 72px;
   font-size: 36px;
   line-height: 1.11;
@@ -598,38 +620,39 @@ p {
   text-transform: capitalize;
 }
 
-.our-portfolio-list {
+.portfolio-list {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 72px;
 }
 
-.our-portfolio-item {
-  max-width: 288px;
-  background-color: #ffffff;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  position: relative;
+.portfolio-item {
+  background: #fff;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:not(:last-child) {
+  margin-bottom: 48px;
 }
 
 @media only screen and (min-width: 768px) {
-  .our-portfolio-item {
+  .portfolio-item {
     width: calc((100% - 1 * 24px) / 2);
+  }
+  .portfolio-item:not(:last-child) {
+    margin-bottom: 0;
   }
 }
 
 @media only screen and (min-width: 1158px) {
-  .our-portfolio-item {
+  .portfolio-item {
     width: calc((100% - 2 * 24px) / 3);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .our-portfolio-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+}
+.portfolio-wrapper {
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-img {
@@ -638,26 +661,24 @@ p {
 }
 
 .overlay {
+  color: #f4f4fd;
   position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
   top: 0;
   left: 0;
+  transform: translateY(100%);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
-  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
 }
-.our-portfolio-item:hover .overlay {
-  transform: translateY(0);
-}
-.our-portfolio-item-wrapper {
-  position: relative;
-  overflow: hidden;
+.portfolio-container {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 32px 16px;
 }
 
 /* #endregion */
@@ -668,44 +689,29 @@ p {
   padding: 96px 0;
 }
 
-@media only screen and (min-width: 768px) {
-  .footer {
-    padding-left: 108px;
-  }
-}
-
 @media only screen and (min-width: 1158px) {
   .footer {
-    padding: 100px 156px;
+    padding: 100px 0;
   }
-}
-
-.footer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
-  .footer-container {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-}
-
-@media only screen and (min-width: 1158px) {
   .footer-container {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: baseline;
+    padding: 0 108px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-container {
+    flex-wrap: nowrap;
+    padding: 0 16px;
   }
 }
 
 .footer-style {
-  width: 288px;
   margin-bottom: 72px;
 }
 
@@ -718,15 +724,11 @@ p {
 
 @media only screen and (min-width: 1158px) {
   .footer-style {
-    width: 264px;
     margin-right: 120px;
     margin-bottom: 0;
   }
 }
 
-.svg-footer-img {
-  fill: var(--color-cloud);
-}
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -745,12 +747,8 @@ p {
 }
 
 .footer-text {
+  width: 264px;
   color: #f4f4fd;
-  max-width: 288px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 }
 
 .logo-part {
@@ -758,15 +756,13 @@ p {
 }
 
 .footer-links {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   margin-bottom: 72px;
 }
 
 @media only screen and (min-width: 768px) {
   .footer-links {
-    align-items: flex-start;
+    text-align: left;
     margin-bottom: 0;
   }
 }
@@ -790,60 +786,42 @@ p {
     margin-top: 0;
   }
 }
-.svg-footer-list {
+.footer-list {
   display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 16px;
+  justify-content: center;
+}
+@media only screen and (min-width: 768px) {
+  .footer-list {
+    justify-content: flex-start;
+  }
 }
 
 .svg-footer-item {
   width: 40px;
   height: 40px;
 }
-
-.svg-footer-link {
-  background-color: #4d5ae5;
-  fill: #f4f4fd;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+.footer-link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-@media only screen and (min-width: 320px) and (max-width: 1157px) {
-  .svg-footer-link:active {
-    background-color: #31d0aa;
-  }
+.footer-link:hover,
+.footer-link:focus {
+  background-color: #31d0aa;
 }
-
-@media only screen and (min-width: 1158px) {
-  .svg-footer-link:hover,
-  .svg-footer-link:focus {
-    background-color: #31d0aa;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-/* Subscribe Section */
 
 .subscribe-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
+}
+@media only screen and (min-width: 768px) {
+  .subscribe-container {
+    text-align: left;
+  }
 }
 
 .subscribe {
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
-  text-align: center;
 }
 
 @media only screen and (min-width: 768px) {
@@ -854,8 +832,9 @@ p {
 
 .form-subscribe {
   display: flex;
-  gap: 16px;
   flex-direction: column;
+  align-items: center;
+  gap: 16px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -866,19 +845,18 @@ p {
 }
 
 .subscribe-input {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: transparent;
-  border: 1px solid #fff;
-  border-radius: 4px;
   width: 288px;
   height: 40px;
-  font-weight: 400;
+  border: 1px solid #fff;
+  color: #ffffff;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  color: #ffffff;
+  padding: 8px;
   padding-left: 16px;
-  opacity: 0.3;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: transparent;
 }
 
 @media only screen and (min-width: 768px) {
@@ -887,89 +865,48 @@ p {
   }
 }
 
-@media only screen and (min-width: 1158px) {
-  .subscribe-input {
-    opacity: 1;
-  }
-}
-
-.subscribe-input:active {
-  border-color: #31d0aa;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 1;
-}
-
-@media only screen and (min-width: 1158px) {
-  .subscribe-input:hover,
-  .subscribe-input:focus {
-    border-color: #31d0aa;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-  }
-}
-
 .subscribe-input::placeholder {
-  color: #fff;
-  opacity: 0.6;
-}
-
-@media only screen and (min-width: 1158px) {
-  .subscribe-input::placeholder {
-    opacity: 1;
-  }
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #ffffff;
 }
 
 .subscribe-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d5ae5;
   border-radius: 4px;
-  padding: 8px 24px;
-  max-width: 165px;
-  height: 40px;
   border: none;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  background-color: #4d5ae5;
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  text-align: center;
-  color: #fff;
-}
-
-.subscribe-btn:active {
-  background-color: #31d0aa;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media only screen and (min-width: 1158px) {
-  .subscribe-btn:hover,
-  .subscribe-btn:focus {
-    background-color: #31d0aa;
-    transition: background-color 250ms cubic-bezier(0.4, 0.2, 0.4, 1);
-  }
+  text-align: left;
+  cursor: pointer;
+  color: #ffffff;
 }
 
 .subscribe-icon {
-  width: 24px;
-  height: 24px;
   fill: #fff;
   margin-left: 16px;
 }
 
 /* #endregion */
 
-/* #region Leave your contacts and we will call you back */
+/* #region Modal */
 .backdrop {
+  background-color: rgba(46, 47, 66, 0.4);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  z-index: 999;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -980,18 +917,17 @@ p {
 .backdrop.is-open {
   opacity: 1;
   visibility: visible;
-  pointer-events: initial;
+  pointer-events: auto;
 }
 
 .modal {
-  padding: 72px 16px 24px 16px;
-  position: relative;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateY(-50%) translateX(-50%);
+  transform: translate(-50%, -50%);
   width: 288px;
   min-height: 623px;
+  padding: 72px 16px 24px;
   border-radius: 4px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -1001,10 +937,9 @@ p {
 
 @media only screen and (min-width: 768px) {
   .modal {
-    position: absolute;
-    padding: 72px 24px 24px 24px;
     width: 408px;
     min-height: 584px;
+    padding: 72px 24px 24px;
   }
 }
 
@@ -1025,21 +960,11 @@ p {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close-btn:active {
+
+.close-btn:hover,
+.close-btn:focus {
   background-color: #404bbf;
   border: none;
-}
-@media only screen and (min-width: 1158px) {
-  .close-btn:hover,
-  .close-btn:focus {
-    background-color: #404bbf;
-    border: none;
-  }
-
-  .close-icon {
-    fill: #2e2f42;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
 }
 
 .close-btn:hover .close-icon,
@@ -1047,42 +972,31 @@ p {
   fill: #ffffff;
 }
 
-.form-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 16px;
+.close-icon {
+  fill: #2e2f42;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: fill;
 }
 
-.form {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  border-radius: 4px;
-  width: 256px;
-  min-height: 58px;
+.form-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  text-align: center;
+  color: #2e2f42;
 }
-@media only screen and (min-width: 768px) {
-  .form {
-    width: 360px;
-  }
-}
+
 .form-field {
   margin-bottom: 8px;
 }
 
 .form-label {
   display: block;
-  font-weight: 400;
+  position: relative;
+  margin-bottom: 4px;
   font-size: 12px;
-  line-height: 1.17;
+  line-height: 117%;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  margin-bottom: 4px;
 }
 
 .input-wrapper {
@@ -1090,75 +1004,73 @@ p {
 }
 
 .form-input {
-  width: 100%;
+  padding-left: 38px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 256px;
   height: 40px;
-  padding: 8px 38px;
+  background-color: transparent;
   outline: transparent;
-  color: #2e2f42;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: border-color;
 }
 @media only screen and (min-width: 768px) {
   .form-input {
     width: 360px;
   }
 }
-.form-input:active {
-  border: 1px solid #4d5ae5;
-}
-@media only screen and (min-width: 1158px) {
-  .form-input:hover,
-  .form-input:focus {
-    border: 1px solid #4d5ae5;
-  }
+.form-input:hover,
+.form-input:focus {
+  border-color: #4d5ae5;
 }
 
 .form-icon {
   position: absolute;
   top: 50%;
-  left: 16px;
   transform: translateY(-50%);
-  fill: #8e8f99;
-  pointer-events: none;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  left: 16px;
+  fill: #2e2f42;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: fill;
 }
 
 .form-input:hover + .form-icon,
 .form-input:focus + .form-icon {
   fill: #4d5ae5;
 }
-.form-field-label-comment {
+.form-field {
+  margin-bottom: 8px;
+}
+.label-comment {
   margin-bottom: 16px;
 }
 .form-textarea {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  width: 100%;
+  resize: none;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  padding: 8px 16px;
   width: 256px;
-  height: 120px;
+  min-height: 120px;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  padding: 8px 16px;
   background-color: transparent;
   outline: transparent;
-  resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: border-color;
 }
-@media only screen and (min-width: 1158px) {
-  .form-textarea:hover,
-  .form-textarea:focus {
-    border-color: #4d5ae5;
+@media only screen and (min-width: 768px) {
+  .form-textarea {
+    width: 360px;
   }
 }
-.form-textarea:active {
-  border: 1px solid #4d5ae5;
+.form-textarea:hover,
+.form-textarea:focus {
+  border-color: #4d5ae5;
 }
-textarea::placeholder {
+
+.textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -1168,68 +1080,81 @@ textarea::placeholder {
 }
 
 .form-checkbox {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+  margin-bottom: 24px;
 }
 
 .span-form {
+  display: inline-flex;
   width: 16px;
   height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
   border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  cursor: pointer;
+  fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  flex-wrap: wrap;
+}
+
+.form-label-text {
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  fill: transparent;
-  margin-right: 8px;
 }
 
 input[type="checkbox"]:checked + .form-label-text .span-form {
-  background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
+  background-color: #404bbf;
+  border-color: #404bbf;
+}
+input[type="checkbox"]::focus-visible + .form-label-text .span-form {
+  outline: 1px solid #404bbf;
+  outline-offset: 2px;
+}
+input[type="checkbox"]:checked + .form-label-text .span-form .form-label-text {
+  opacity: 1;
 }
 
 .checkbox-link {
-  line-height: 1.33;
+  line-height: 133%;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
+}
+.checkbox-icon {
+  fill: #f4f4fd;
+  opacity: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: opacity;
 }
 
 .form-submit {
   display: block;
   margin: 0 auto;
+  border-radius: 4px;
+  padding: 16px 32px;
   min-width: 169px;
   height: 56px;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  cursor: pointer;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
   border: none;
+  line-height: 1.5;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border-radius: 5px;
 }
 
-.form-submit:active {
-  background: #404bbf;
-}
-
-@media only screen and (min-width: 1158px) {
-  .form-submit:hover,
-  .form-submit:focus {
-    background-color: #404bbf;
-  }
-}
 /* #endregion */
 /* #region Footer input */
 input {
